<resources>
    <string name="app_name">QuoteBreaker</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="square_feet">Square Feet of Building</string>
    <string name="payne">Payne</string>
    <string name="carrier">Carrier</string>
    <string name="one">1 Story</string>
    <string name="two">2 Story</string>
    <string name="calc">Calculate</string>
    <string name="brand_selection">Brand Selection</string>
    <string name="required_btu">Required BTUs</string>
    <string name="selected_btu">Selected BTUs</string>
    <string name="bump_up">Bump +</string>
    <string name="bump_down">Bump -</string>
    <string name="base_price">Base Equipment Price</string>
    <string name="install_requirements">Required Installation Additions</string>
    <string name="carrier_single_40">59SC5A 40,000 BTU</string>
    <string name="carrier_single_60">59SC5A 60,000 BTU</string>
    <string name="carrier_single_80">59SC5A 80,000 BTU</string>
    <string name="carrier_single_100">59SC5A 100,000 BTU</string>
    <string name="carrier_single_120">59SC5A 120,000 BTU</string>
    <string name="carrier_two_60">59TN6A 60,000 BTU</string>
    <string name="carrier_two_80">59TN6A 80,000 BTU</string>
    <string name="carrier_two_100">59TN6A 100,000 BTU</string>
    <string name="carrier_two_120">59TN6A 120,000 BTU</string>
    <string name="carrier_mod_60">59MN7A 60,000 BTU</string>
    <string name="carrier_mod_80">59MN7A 80,000 BTU</string>
    <string name="carrier_mod_100">59MN7A 100,000 BTU</string>
    <string name="carrier_mod_120">59MN7A 120,000 BTU</string>
    <string name="payne_single_40">PG95SAS 40,000 BTU</string>
    <string name="payne_single_60">PG95SAS 60,000 BTU</string>
    <string name="payne_single_80">PG95SAS 80,000 BTU</string>
    <string name="payne_single_100">PG95SAS 100,000 BTU</string>
    <string name="payne_single_120">PG95SAS 120,000 BTU</string>
    <string name="payne_two_40">PG95XAT 40,000 BTU</string>
    <string name="payne_two_60">PG95XAT 60,000 BTU</string>
    <string name="payne_two_80">PG95XAT 80,000 BTU</string>
    <string name="payne_two_100">PG95XAT 100,000 BTU</string>
    <string name="payne_two_120">PG95XAT 120,000 BTU</string>
    <string name="carrier_single_40_price">$2997.00</string>
    <string name="carrier_single_60_price">$3039.00</string>
    <string name="carrier_single_80_price">$3118.00</string>
    <string name="carrier_single_100_price">$3171.00</string>
    <string name="carrier_single_120_price">$3223.00</string>
    <string name="carrier_two_60_price">$4058.00</string>
    <string name="carrier_two_80_price">$4299.00</string>
    <string name="carrier_two_100_price">$4504.00</string>
    <string name="carrier_two_120_price">$4667.00</string>
    <string name="carrier_mod_60_price">$4504.00</string>
    <string name="carrier_mod_80_price">$4719.00</string>
    <string name="carrier_mod_100_price">$4982.00</string>
    <string name="carrier_mod_120_price">$5139.75</string>
    <string name="payne_single_40_price">$2457.00</string>
    <string name="payne_single_60_price">$2420.00</string>
    <string name="payne_single_80_price">$2465.00</string>
    <string name="payne_single_100_price">$2520.00</string>
    <string name="payne_single_120_price">$2620.00</string>
    <string name="payne_two_40_price">$2698.00</string>
    <string name="payne_two_60_price">$2829.00</string>
    <string name="payne_two_80_price">$2961.00</string>
    <string name="payne_two_100_price">$3066.00</string>
    <string name="payne_two_120_price">$3223.00</string>
    <string name="cond_pump_addon">Condensate Pump and Tubing</string>
    <string name="cond_pump_addon_price">$210.00</string>
    <string name="programmable_tstat_addon">Programmable Thermostat</string>
    <string name="programmable_tstat_price">$126.00</string>
    <string name="two_programmable_tstat_addon">Two Stage Programmable Thermostat</string>
    <string name="two_programmabel_tstat_addon_price">$210.00</string>
    <string name="infinity_wifi_addon">Add WiFi to Infinity</string>
    <string name="infinity_wifi_addon_price">$750.00</string>
    <string name="filter_boot">Filter Boot (Lowboys)</string>
    <string name="filter_boot_price">$131.00</string>
    <string name="crawl_attic">Crawl or Attic</string>
    <string name="crawl_attic_price">$210.00</string>
    <string name="after_hours">After Hours</string>
    <string name="after_hours_price">$210.00</string>
    <string name="one_permit">One Piece Permit</string>
    <string name="one_permit_price">$160.00</string>
    <string name="two_permit">Two Piece Permit</string>
    <string name="two_permit_price">$210.00</string>
    <string name="conversion_kit">LP Conversion Kit</string>
    <string name="conversion_kit_price">$184.00</string>
    <string name="horizonal">Horizonal Install</string>
    <string name="horizonal_price">$150.00</string>
    <string name="ten_year_labor">10 Year Labor Warranty</string>
    <string name="ten_year_labor_price">475.00ea</string>
    <string name="total_button">Total</string>
    <string name="total_price_text">Total Quote Price</string>
    <string name="total_price_hint">$0.00</string>
    <string name="square_feet_hint">1400</string>
    <string name="btu_hint">40,000</string>
    <string name="unavailable">unavailable</string>
    <string name="reset_button">Reset</string>
    <string name="next">Next</string>
    <string name="furnace_model">Furnace Model</string>
    <string name="furnace_price">Price</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
