<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/tab_1"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/one_story_check"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/one"
                android:textAlignment="center"
                android:theme="@style/checkBoxStyle"/>

            <CheckBox
                android:id="@+id/two_story_check"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/two"
                android:textAlignment="center"
                android:theme="@style/checkBoxStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/square_feet"/>

            <EditText
                android:id="@+id/calculated_square"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/square_feet_hint"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/calculate_square_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/calc"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/required_btu"/>

    <TextView
        android:id="@+id/required_btu_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/btu_hint"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/selected_btu"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bump_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:background="@drawable/custom_button"
            android:text="@string/bump_down"/>

        <TextView
            android:id="@+id/selected_btu_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".3"
            android:hint="@string/btu_hint"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/bump_down_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:background="@drawable/custom_button"
            android:text="@string/bump_up"/>

    </LinearLayout>

    <Button
        android:id="@+id/size_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="0dp"
        android:text="@string/save"/>

</LinearLayout>