<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/tab_2"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.programming.waldorf.quotebreaker.ModelFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/brand_selection"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/carrier_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@drawable/custom_button"
            android:text="@string/carrier"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/payne_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@drawable/custom_button"
            android:text="@string/payne"
            android:textAlignment="center"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/base_price"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:theme="@style/checkBoxStyle">

        <TableRow>

            <CheckBox
                android:id="@+id/option_one_check"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/option_one"
                android:layout_weight=".5"
                android:gravity="center"
                android:hint="@string/furnace_model"
                android:padding="3dip"/>

            <TextView
                android:id="@+id/option_one_price"
                android:layout_weight=".2"
                android:gravity="center"
                android:hint="@string/furnace_price"
                android:padding="3dip"/>
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/option_two_check"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/option_two"
                android:layout_weight=".5"
                android:gravity="center"
                android:hint="@string/furnace_model"
                android:padding="3dip"/>

            <TextView
                android:id="@+id/option_two_price"
                android:layout_weight=".2"
                android:gravity="center"
                android:hint="@string/furnace_price"
                android:padding="3dip"/>
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/option_three_check"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/option_three"
                android:layout_weight=".5"
                android:gravity="center"
                android:hint="@string/furnace_model"
                android:padding="3dip"/>

            <TextView
                android:id="@+id/option_three_price"
                android:layout_weight=".2"
                android:gravity="center"
                android:hint="@string/furnace_price"
                android:padding="3dip"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/brand_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/save"/>

</LinearLayout>
